@@ -23,6 +23,7 @@
 
     Multisite:
     * 3897 FIX: Fixed possible exception in raw edition when rendering graphs
+    * 3898 FIX: Unmonitored services: Fixed possible bug in case discovery service produces unexpected output
 
     WATO:
     * 3915 User access times: New icon when never logged in; New column "last seen"
